--- a/sites/index.html
+++ b/sites/index.html
@@ -26,6 +26,10 @@
         <p class="item__urls"><a href="github.io">github.io</a><span class="item__count">(2)</span></p>
     </li>
     
+    <li class="item">
+        <p class="item__urls"><a href="kusoikore.github.io">kusoikore.github.io</a><span class="item__count">(2)</span></p>
+    </li>
+    
 </ol>
 </main>
 <footer id="footer">contact me: tenki_ufo [at] riseup [dot] net</footer>
