--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-10th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-10th-copy/">notes</a>
     </p>
 </li>
 
@@ -68,7 +68,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-11th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-11th-copy/">notes</a>
     </p>
 </li>
 
@@ -92,7 +92,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-12th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-12th-copy/">notes</a>
     </p>
 </li>
 
@@ -116,7 +116,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-13th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-13th-copy/">notes</a>
     </p>
 </li>
 
@@ -140,7 +140,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-14th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-14th-copy/">notes</a>
     </p>
 </li>
 
@@ -164,7 +164,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-15th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-15th-copy/">notes</a>
     </p>
 </li>
 
@@ -188,7 +188,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-16th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-16th-copy/">notes</a>
     </p>
 </li>
 
@@ -212,7 +212,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-17th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-17th-copy/">notes</a>
     </p>
 </li>
 
@@ -236,7 +236,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-18th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-18th-copy/">notes</a>
     </p>
 </li>
 
@@ -260,7 +260,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-19th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-19th-copy/">notes</a>
     </p>
 </li>
 
@@ -284,7 +284,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-20th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-20th-copy/">notes</a>
     </p>
 </li>
 
@@ -308,7 +308,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-21st-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-21st-copy/">notes</a>
     </p>
 </li>
 
@@ -332,7 +332,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-22nd-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-22nd-copy/">notes</a>
     </p>
 </li>
 
@@ -356,7 +356,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-23rd-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-23rd-copy/">notes</a>
     </p>
 </li>
 
@@ -380,7 +380,7 @@
             <a class="item__tag" href="/tags/www">www</a>
             <a class="item__tag" href="/tags/cdr">cdr</a>
             <a class="item__tag" href="/tags/testing">testing</a>
-        <a class="item__notes notes" href="https://kusoikore.github.io/items/kusoikore-24th-copy/">notes</a>
+        <a class="item__notes notes" href="https://bibliotika.github.io/items/kusoikore-24th-copy/">notes</a>
     </p>
 </li>
 
