--- a/index.html
+++ b/index.html
@@ -412,5 +412,9 @@
 </main>
 <footer id="footer">contact me: tenki_ufo [at] riseup [dot] net</footer>
 </body>
+	<div class="image">
+	<script src="resources/pic.js"></script>
+</div>
+
 </html>
 
