--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 <footer id="footer">contact me: tenki_ufo [at] riseup [dot] net</footer>
 </body>
 	<div class="image">
-	<script src="resources/pic.js"></script>
+	<script src="pic.js"></script>
 </div>
 
 </html>
